java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: three-tier
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
